fix stake buttons on mobile

--- a/mystyle.css
+++ b/mystyle.css
@@ -72,7 +72,7 @@ button {
 #visible-scrollbar {
     height: 50px;
     width: 75%;
-    padding-left: 150px;
+    padding-left: 100px;
     overflow-y: scroll;
 }
 
